--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "openai": "^4.102.0",
     "react": "^19",
     "react-day-picker": "9.6.7",
     "react-dom": "^19",
