--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "pre-commit": "^1.2.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
   }
