Add vercel-build script for clean builds
- Ensures builds work correctly on Vercel
- Addresses potential caching issues

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "seed-demo": "tsx scripts/seed-demo-data.ts",
     "setup-guest": "tsx scripts/setup-guest-account.ts",
     "supabase:migrate": "supabase db push",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
