--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev:https": "next dev --experimental-https --experimental-https-key ./certificates/localhost.key --experimental-https-cert ./certificates/localhost.crt",
     "build": "next build",
     "start": "next start",
-    "lint": "echo 'Linting skipped for demo deployment'",
+    "lint": "next lint --fix",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
